change name from index.html

--- a/eventron/client/index.html
+++ b/eventron/client/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Eventron - Virtual Event Organizer Agent App with AI/ML">
-  <title>Eventron</title>
+  <title>EventSync AI</title>
   <!-- Favicon: SVG logo -->
   <link rel="icon" type="image/svg+xml" href="/eventron-logo.svg">
 </head>
